--- a/css/style.css
+++ b/css/style.css
@@ -3,15 +3,15 @@ html {
   font-family: nyt-cheltenham,georgia,'times new roman',times,serif;
 }
 
-header {
-  border-bottom: 1px solid #e2e2e2;
-}
+/* NAVBAR */
+
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 4px 15px 2px;
   max-width: 1605px;
+  border-bottom: 1px solid #e2e2e2;
 }
 #nav-logo {
   height: 26px;
@@ -37,7 +37,7 @@ nav {
   letter-spacing: 0.7;
 }
 
-#left-controls svg {
+#left-controls svg, #right-controls svg {
   height: 16px;
   width: 16px;
 }
@@ -62,4 +62,78 @@ nav {
   letter-spacing: 0.05em;
   text-transform: uppercase;
   padding: 11px 12px 8px;
+}
+
+#right-controls-collapsed {
+  display: flex;
+  justify-content: end;
+  font-size: 10px;
+  text-transform: uppercase;
+  font-family: nyt-franklin,helvetica,arial,sans-serif;
+  color: rgb(50, 104, 145);
+  padding: 6px;
+}
+#right-controls-collapsed a {
+  padding: 0 8px;
+  text-decoration: none;
+  color: rgb(50, 104, 145)
+}
+.nav-divider {
+  width: 1px;
+  background: #d1d1d1;
+}
+@media only screen and (min-width: 1024px) {
+  #right-controls-collapsed, .account {
+    display: none;
+  }
+
+}
+
+@media only screen and (max-width: 1024px) {
+  .search, .article-title, #right-controls button {
+    display: none;
+  }
+  .account {
+    display: block;
+  }
+  nav {
+    padding: 10px 15px 6px;
+  }
+  #nav-logo {
+    height: 30px;
+    width: 225px;
+  }
+}
+/* MAIN CONTENT GRID */
+#grid-container {
+  display: grid;
+  max-width: 1200px;
+  grid-template-columns: 1fr 3fr 1fr;
+  grid-auto-rows: auto;
+  margin: 0 auto;
+}
+
+article h1 {
+  grid-column-start: 2;
+  max-width: 403px;
+  margin-top: 40px;
+}
+#article-image {
+  grid-column: 1 / span 3;
+}
+#article-image img {
+  width: 100%;
+}
+
+.caption {
+  font-size: 0.9375rem;
+  line-height: 1.25rem;
+  max-width: 900px;
+  padding: 8px 16px;
+  color: #666;
+}
+.credit {
+  display: block;
+  color: rgb(136, 136, 136);
+  font-size: 0.75rem;
 }
