Finish adding article content

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@ nav {
   padding: 4px 15px 2px;
   max-width: 1605px;
   border-bottom: 1px solid #e2e2e2;
-  margin-auto;
 }
 #nav-logo {
   height: 26px;
@@ -200,6 +199,12 @@ article h1 {
 
 .main-content {
   grid-column-start: 2;
+}
+.main-content img {
+  width: 100%;
+}
+.main-content iframe {
+  width: 100%;
 }
 
 
