--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,23 @@ html {
   font-family: nyt-cheltenham,georgia,'times new roman',times,serif;
 }
 
-/* NAVBAR */
+button{
+  cursor: pointer;
+  border-radius: 3px;
+  background-color: #567b95;
+  border: 1px solid #326891;
+  color: #fff;
+  font-family: nyt-franklin,helvetica,arial,sans-serif;
+  white-space: nowrap;
+  font-size: 11px;
+  font-weight: 700;
+  line-height: 11px;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  padding: 11px 12px 8px;
+}
 
+/* NAVBAR */
 nav {
   display: flex;
   justify-content: space-between;
@@ -47,21 +62,6 @@ nav {
 }
 #right-controls :first-child {
   margin-right: 7px;
-}
-#right-controls button{
-  cursor: pointer;
-  border-radius: 3px;
-  background-color: #567b95;
-  border: 1px solid #326891;
-  color: #fff;
-  font-family: nyt-franklin,helvetica,arial,sans-serif;
-  white-space: nowrap;
-  font-size: 11px;
-  font-weight: 700;
-  line-height: 11px;
-  letter-spacing: 0.05em;
-  text-transform: uppercase;
-  padding: 11px 12px 8px;
 }
 
 #right-controls-collapsed {
@@ -208,6 +208,10 @@ article h1 {
 .main-content iframe {
   width: 100%;
 }
+.main-content .caption {
+  margin: 0;
+  padding: 0;
+}
 
 
 
@@ -314,4 +318,20 @@ article h1 {
   background: #ccc;
   display: block;
   margin-top: 18px;
+}
+
+.afterword {
+  font-family: nyt-franklin, helvetica, arial, sans-serif;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  width: calc(100% - 40px);
+  max-width: 600px;
+  color: rgb(102, 102, 102);
+}
+
+.article-controls-bottom {
+  margin-top: 10px;
+  grid-column-start: 2;
+  display: flex;
+  justify-content: space-between;
 }
