--- a/css/style.css
+++ b/css/style.css
@@ -108,18 +108,18 @@ nav {
 #grid-container {
   display: grid;
   max-width: 1200px;
-  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-columns: 1fr 300px 300px 1fr;
   grid-auto-rows: auto;
   margin: 0 auto;
 }
 
 article h1 {
-  grid-column-start: 2;
+  grid-column: 2 / 4;
   max-width: 403px;
   margin-top: 40px;
 }
 #article-image {
-  grid-column: 1 / span 3;
+  grid-column: 1 / -1;
 }
 #article-image img {
   width: 100%;
@@ -198,7 +198,7 @@ article h1 {
 }
 
 .main-content {
-  grid-column-start: 2;
+  grid-column: 2 / span 2;
   font-size: 1.25rem;
   line-height: 1.875rem;
 }
@@ -334,4 +334,42 @@ article h1 {
   grid-column-start: 2;
   display: flex;
   justify-content: space-between;
+}
+
+#more-content {
+  grid-column: 1 / -1;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 50px 1fr 1fr 50px 1fr;
+  grid-gap: 16px;
+  margin: 64px 16px;
+}
+#more-content img{
+ width: 100%;
+}
+
+.header {
+  padding: 16px 0;
+  margin-top: 16px;
+  border-top: 1px solid black;
+}
+.left {
+  grid-column: 1 / -2;
+}
+.right {
+  grid-column-start: -2;
+}
+
+.sidebar {
+  grid-row: 2 / -1;
+}
+.sidebar {
+  margin: 0;
+  padding: 0;
+}
+.sidebar li {
+  list-style-type: none;
+  margin: 0;
+  padding: 16px 0;
+  border-top: 1px solid#efefef;
 }
