--- a/css/style.css
+++ b/css/style.css
@@ -106,11 +106,15 @@ nav {
 }
 /* MAIN CONTENT GRID */
 #grid-container {
-  display: grid;
   max-width: 1200px;
-  grid-template-columns: 1fr 300px 300px 1fr;
-  grid-auto-rows: auto;
   margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1.25fr 1.25fr 1fr;
+  grid-auto-rows: auto;
+}
+
+@media only screen and (min-width: 600px) {
+  
 }
 
 article h1 {
@@ -146,7 +150,7 @@ article h1 {
 }
 
 .meta {
-  grid-column-start: 2;
+  grid-column: 2 / -2;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -265,7 +269,7 @@ article h1 {
   right: 0;
   bottom: 0;
   grid-gap: 6px;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 0.25fr;
 }
 .image-grid p {
   position: relative;
@@ -340,7 +344,6 @@ article h1 {
   grid-column: 1 / -1;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  grid-template-rows: 50px 1fr 1fr 50px 1fr;
   grid-gap: 16px;
   margin: 64px 0;
 }
@@ -400,14 +403,13 @@ article h1 {
 @media only screen and (min-width: 600px) {
   #more-content {
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 50px 1fr 1fr 50px 1fr;
   }
 }
 
 @media only screen and (min-width: 740px) {
   #more-content {
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 50px 1fr 1fr 50px 1fr;
+    grid-template-rows: 50px 1fr 1fr 1fr 50px;
   }
   .left {
     grid-column: 1 / -2;
@@ -422,4 +424,10 @@ article h1 {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 50px 1fr 1fr 50px 1fr;
   }
+}
+
+/* FOOTER SITE-INDEX */
+
+#site-index {
+  border-top: 2px solid black;
 }
