--- a/css/style.css
+++ b/css/style.css
@@ -476,6 +476,17 @@ article h1 {
   border-top: 1px solid #e2e2e2;
 }
 
+#grid-index { 
+  display: none;
+}
+
+#grid-index ul li {
+  padding: 6px 0;
+  border: none;
+  font-weight: 500;
+  text-transform: capitalize;
+}
+
 footer {
   font-size: 11px;
   font-family: sans-serif;
@@ -506,4 +517,14 @@ footer ul {
 footer li {
   display: inline-block;
   padding: 8px 0;
+}
+
+@media only screen and (min-width: 1150px) {
+  #mobile-index {
+    display: none;
+  }
+  #grid-index { 
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+  }
 }
